--- a/CREDENTIALS LOCKER/index_style.css
+++ b/CREDENTIALS LOCKER/index_style.css
@@ -14,10 +14,11 @@
     align-items: center;
 }
 .con {
-    width: 350px;
+    width: 500px;
     font-weight: bold;
     color: white;
     padding: 10px;
+    font-size: 30px;
 }
 #getemaillogin, #emaillogin, #getpasslogin, #passwordlogin, #transfer {
     font-weight: bold;
