--- a/LOGIN PAGE/index_style.css
+++ b/LOGIN PAGE/index_style.css
@@ -4,6 +4,10 @@
     background-size: cover;
     background-position: center;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .box{
     display: flex;
